WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277073
Unreviewed, remove incorrect ASSERTs from JSWebAssemblyInstance
https://bugs.webkit.org/show_bug.cgi?id=277073
Summary
Unreviewed, remove incorrect ASSERTs from JSWebAssemblyInstance
Keith Miller
Reported
2024-07-25 04:26:07 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2024-07-25 04:27:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31218
EWS
Comment 2
2024-07-25 06:59:15 PDT
Committed
281347@main
(baa1f6e6d548): <
https://commits.webkit.org/281347@main
> Reviewed commits have been landed. Closing PR #31218 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-25 07:00:17 PDT
<
rdar://problem/132484587
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug