Unreviewed, remove incorrect ASSERTs from JSWebAssemblyInstance https://bugs.webkit.org/show_bug.cgi?id=277073

The ASSERT(globalObject == this->globalObject()) isn't true when there's a newTarget

* JSTests/wasm/stress/cross-realm-webassembly-instances.js: Added.
(const.getNewTargets):
(test):
(assert_equal):
(constructorArg.of.interfaces.testDescription.of.getNewTargets):
* Source/JavaScriptCore/wasm/js/JSWebAssemblyInstance.cpp:
(JSC::JSWebAssemblyInstance::initializeImports):
(JSC::JSWebAssemblyInstance::finalizeCreation):

Canonical link: https://commits.webkit.org/281347@main